# fire_A

./: README.md
arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
arm_moveit_config/launch/: demo.launch.py
arm_moveit_config/scripts/: arm.txt  base_tf_traj.py  move.py  move.txt  world_marker.py
robot/: CMakeLists.txt  package.xml
robot/config/: joint_names_robot.yaml
robot/launch/: display.launch.py  gazebo.launch.py
robot/meshes/: base_link.STL  elbow_link.STL  shoulder_link.STL  tool.STL  world.STL  wrist1_link.STL  wrist2_link.STL  wrist3_link.STL
robot/rviz/: urdf.rviz
robot/urdf/: robot.csv  robot.urdf
